syntax = "proto3";
import "google/protobuf/any.proto";
option go_package = "/internal/gen";

enum Status {
    OK = 0;
    ERROR = 1;
}

message GetRequest { 
    string key = 1;
}

message GetResponse { 
    Status status = 1;
    optional google.protobuf.Any value = 2;
}

message Response {
    Status status = 1;
}

message PutRequest { 
    string key = 1;
    google.protobuf.Any value = 2;
}

message DeleteRequest { 
    string key = 1;
}

enum OpType {
    ALL = 0;
    PUT = 1;
    DELETE = 2;
}

message WatchRequest {
    string key = 1;
    OpType watchType = 2;
}

message WatchResponse {
    OpType watchType = 1;
    string key = 2;
    optional google.protobuf.Any value = 3;
}

service KV { 
    rpc Put(PutRequest) returns (Response);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Delete(DeleteRequest) returns (Response);
    rpc Watch(WatchRequest) returns (stream WatchResponse);
}

message StringSliceWrapper {
    repeated string value = 1;
}

message Int32SliceWrapper {
    repeated int32 value = 1;
}

message Int64SliceWrapper {
    repeated int64 value = 1;
}

message Float32SliceWrapper {
    repeated float value = 1;
}

message Float64SliceWrapper {
    repeated double value = 1;
}



